# TaskAgentV2

./: .env.example  .gitignore  LEARNING_DIARY.md  README.md  agent.py  main.py  pyproject.toml  test_crew.py
.agents/skills/learning-diary/: SKILL.md
app/: agent.py  main.py
app/crew/: __init__.py  agents.py  crew.py  tasks.py  tools.py
app/graph/: graph.py  nodes.py
crew/: agents.py  crew.py  tasks.py  tools.py
docs/: LEARNING_DIARY.md  arquitetura.md
graph/: graph.py  nodes.py  state.py
static/: index.html
tests/: test_crew.py
